fix: layout shift when loading Btn in full Actions

--- a/packages/skcom-css/src/components/button.scss
+++ b/packages/skcom-css/src/components/button.scss
@@ -126,7 +126,7 @@
   padding-inline: 0;
 
   .skc-actions--full & {
-    padding-inline: 1.125rem;
+    padding-inline: 1rem;
   }
 
   > .skc-progress {
